homepage/treafik-ingress-homepage.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingress
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.local.io`)  # Change to your domain
      services:
        - name: homepage  # This is your ClusterIP service name
          port: 80
      middlewares:
        - name: redirect-https
  tls: {}
---
# Middleware to redirect HTTP to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: homepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
